Fixed coloring on mobile (changed modal button color to white)

--- a/styles.css
+++ b/styles.css
@@ -478,6 +478,10 @@ footer {
         margin-bottom: 20px;
     }
 
+    .sectionButton{
+        background-color: white;
+    }
+
 }
 
 @media (max-width: 1400px) {
